--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,6 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/enrollme?characterEncoding=UTF-8"
+db.default.user=softwhere
+db.default.password=cs532
