config ebean and mysql

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,13 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/enrollme?characterEncoding=UTF-8"
-db.default.user=softwhere
-db.default.password=cs532
+
+ebean.default = ["models.*"]
+
+play.evolutions {
+  db.default.enalbed = true
+}
+
+db.default.driver = com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/enrollme?useGmtMillisForDatetimes=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&useTimezone=true&serverTimezone=UTC"
+db.default.username = softwhere
+db.default.password = cs532
