make controller action async. add minor to student object

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,27 @@ play.evolutions {
   db.default.enalbed = true
 }
 
+# Number of database connections
+# See https://github.com/brettwooldridge/HikariCP/wiki/About-Pool-Sizing
+fixedConnectionPool = 9
+
 db.default.driver = com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/enrollme?useGmtMillisForDatetimes=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&useTimezone=true&serverTimezone=UTC"
 db.default.username = softwhere
 db.default.password = cs532
+
+# Set Hikari to fixed size
+play.db {
+  prototype {
+    hikaricp.minimumIdle = ${fixedConnectionPool}
+    hikaricp.maximumPoolSize = ${fixedConnectionPool}
+  }
+}
+
+database.dispatcher {
+  executor = "thread-pool-executor"
+  throughput = 1
+  thread-pool-executor {
+    fixed-pool-size = ${fixedConnectionPool}
+  }
+}
